methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:11: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime3.MethodsReturning'
override def run() {
             ^