methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit:Boolean = false
  vuBiscuit = estSurBiscuit()
  for (i <- 1 to 6){
    avance()
    vuBiscuit = estSurBiscuit()
  }
  return vuBiscuit
}

override def run() {
  var continuer:Boolean = true

  while(continuer){
    if (haveBaggle){
      continuer = false
    } else {
      droite()
      avance()
      gauche()
    }
  }
}